# jam-kotlin

./: .codecov.yml  .dockerignore  .gitignore  .gitmodules  .scalafmt.conf  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  Sources.md  TESTING.md  build.gradle.kts  build.sbt  settings.gradle.kts
.github/workflows/: run-tests.yml
gradle/wrapper/: gradle-wrapper.properties
jam-codec/: build.gradle.kts
jam-core/: build.gradle.kts
jam-core/src/test/resources/: trie.json
jam-ec/: build.gradle.kts
jam-pvm/: build.gradle.kts
jam-pvm/src/main/resources/: logback.xml
jam-safrole/: build.gradle.kts
jam-safrole/src/test/kotlin/: AccumulationJsonTest.kt  AssuranceJsonTest.kt  AuthorizationJsonTest.kt  DisputeJsonTest.kt  HistoryJsonTest.kt  (+4 more)
jam-vrfs/: build.gradle.kts
jam-vrfs/bandersnatch-vrfs-wrapper/: Cargo.toml
jam-vrfs/bandersnatch-vrfs-wrapper/src/: lib.rs
kotlin-archive/: build.gradle.kts  settings.gradle.kts
kotlin-archive/config/: detekt.yml
kotlin-archive/examples/pvm-hello-world/: PvmExample.kts
kotlin-archive/jam-core/: build.gradle.kts
kotlin-archive/jam-safrole/: build.gradle.kts
kotlin-archive/jam-vrfs/: build.gradle.kts
kotlin-archive/jam-vrfs/ark-ec-vrfs/: Cargo.toml
kotlin-archive/jam-vrfs/bandersnatch-vrfs-wrapper/: Cargo.toml
modules/core/: README.md  build.sbt
modules/crypto/: README.md
modules/protocol/: README.md
modules/pvm/: README.md  build.sbt
modules/pvm/.bsp/: sbt.json
modules/pvm/project/: plugins.sbt
project/: plugins.sbt
scripts/: build-and-push.sh  compare-port.sh
(+604 files in other folders)
