[package]
name = "bandersnatch-vrfs-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec-vrfs = { git = "https://github.com/davxy/ark-ec-vrfs", rev = "e491b41", features = ["bandersnatch", "ring", "parallel"] }
hex = "0.4.3"
libc = "0.2.161"
jni = "0.21.1"

[lib]
crate-type = ["cdylib"]
