[package]
name = "bandersnatch-vrfs-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec-vrfs = { package = "ark-vrf", git = "https://github.com/davxy/ark-vrf", tag = "v0.1.0", features = ["bandersnatch", "ring", "parallel"] }
hex = "0.4.3"
libc = "0.2.161"
jni = "0.21.1"

[lib]
crate-type = ["cdylib"]
